--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -20,8 +20,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if view_name == 'traders:trade' %}active{% endif %}"
-                 href="{% url 'traders:trade' %}"
+              <a class="nav-link {% if view_name == 'deals:trade' %}active{% endif %}"
+                 href="{% url 'deals:trade' %}"
               >
                 Trading bots
               </a>
