--- a/backend/templates/deals/traders.html
+++ b/backend/templates/deals/traders.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>{{ Traders }}</h1>
-    <p> {{ All traders }} </p>
+    <p> Traders </p>
     {% for trader in traders %}
 
     {% endfor %}
