--- a/backend/templates/deals/deals.html
+++ b/backend/templates/deals/deals.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>{{ Deals }}</h1>
-    <p> {{ All deals }} </p>
+    <p> Deals </p>
     {% for deal in deals %}
 
     {% endfor %}
