--- a/backend/templates/deals/deals.html
+++ b/backend/templates/deals/deals.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-  ctrade-deals
+  Deals
 {% endblock title %}
 {% block content %}
   <div class="container py-5">
