--- a/backend/templates/deals/traders.html
+++ b/backend/templates/deals/traders.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-  ctrade-traders
+  Traders
 {% endblock title %}
 {% block content %}
   <div class="container py-5">
