--- a/backend/templates/deals/traders.html
+++ b/backend/templates/deals/traders.html
@@ -11,7 +11,7 @@
         <tr>
           <th style="text-align:center">Id</th>
           <th style="text-align:center">Date of creation</th>
-          <th style="text-align:center">Status</th>
+          <th style="text-align:center">Working</th>
           <th style="text-align:center">Initial deposit, USD</th>
           <th style="text-align:center">Current deposit, USD</th>
           <!--<th style="text-align:center">Revenue, %</th>-->
@@ -23,7 +23,7 @@
           <tr>
             <td style="text-align:center">{{ trader.id }}</td>
             <td style="text-align:center">{{ trader.creation_date }}</td>
-            <td style="text-align:center">{{ trader.status }}</td>
+            <td style="text-align:center">{{ trader.working }}</td>
             <td style="text-align:center">{{ trader.initial_deposit }}</td>
             <td style="text-align:center">{{ trader.current_deposit }}</td>
             <!--<td style="text-align:center">{{ trader.revenue }}</td>-->
