--- a/backend/templates/deals/traders.html
+++ b/backend/templates/deals/traders.html
@@ -4,8 +4,7 @@
 {% endblock title %}
 {% block content %}
   <div class="container py-5">
-    <h1>{{ Traders }}</h1>
-    <p> All trader's statistics.</p>
+    <h1>All trader's statistics.</h1>
     <table width="100%">
       <thead>
         <tr>
@@ -14,7 +13,7 @@
           <th style="text-align:center">Working</th>
           <th style="text-align:center">Initial deposit, USD</th>
           <th style="text-align:center">Current deposit, USD</th>
-          <!--<th style="text-align:center">Revenue, %</th>-->
+          <th style="text-align:center">Revenue, USD</th>
           <th style="text-align:center">Market</th>
         </tr>
       </thead>
@@ -26,7 +25,7 @@
             <td style="text-align:center">{{ trader.working }}</td>
             <td style="text-align:center">{{ trader.initial_deposit }}</td>
             <td style="text-align:center">{{ trader.current_deposit }}</td>
-            <!--<td style="text-align:center">{{ trader.revenue }}</td>-->
+            <td style="text-align:center">{{ trader.revenue }}</td>
             <td style="text-align:center">{{ trader.market }}</td>
           </tr>
         {% endfor %}
