--- a/backend/templates/deals/home.html
+++ b/backend/templates/deals/home.html
@@ -4,7 +4,6 @@
 {% endblock title %}
 {% block content %}
   <div class="container py-5">
-    <h1>{{ Home }}</h1>
-    <p> Home </p>
+    <h1>Home</h1>
   </div>
 {% endblock content %}
