--- a/backend/templates/deals/deals.html
+++ b/backend/templates/deals/deals.html
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for deal in deals %}
+        {% for deal in page_obj %}
           <tr>
             <td style="text-align:center">{{ deal.id }}</td>
             <td style="text-align:center">{{ deal.opening_date }}</td>
@@ -33,5 +33,6 @@
         {% endfor %}
       </tbody>
     </table>
+    {% include "deals/includes/paginator.html" %}
   </div>
 {% endblock content %}
