--- a/backend/templates/deals/traders.html
+++ b/backend/templates/deals/traders.html
@@ -18,7 +18,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for trader in traders %}
+        {% for trader in page_obj %}
           <tr>
             <td style="text-align:center">{{ trader.id }}</td>
             <td style="text-align:center">{{ trader.creation_date }}</td>
@@ -31,5 +31,6 @@
         {% endfor %}
       </tbody>
     </table>
+    {% include "deals/includes/paginator.html" %}
   </div>
 {% endblock content %}
