--- a/backend/templates/deals/includes/paginator.html
+++ b/backend/templates/deals/includes/paginator.html
@@ -2,9 +2,17 @@
 <nav aria-label="Page navigation" class="my-5">
   <ul class="pagination">
     {% if page_obj.has_previous %}
-      <li class="page-item"><a class="page-link" href="?page=1">Первая</a></li>
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+        <a class="page-link"
+           href="?page=1"
+           style="background-color: #85bb65; color: #000000">
+          Первая
+        </a>
+      </li>
+      <li class="page-item">
+        <a class="page-link"
+           href="?page={{ page_obj.previous_page_number }}"
+           style="background-color: #85bb65; color: #000000">
           Предыдущая
         </a>
       </li>
@@ -12,22 +20,33 @@
     {% for i in page_obj.paginator.page_range %}
         {% if page_obj.number == i %}
           <li class="page-item active">
-            <span class="page-link">{{ i }}</span>
+            <span class="page-link"
+                  style="background-color: #90ad71; color: #000000">
+              {{ i }}
+            </span>
           </li>
         {% else %}
           <li class="page-item">
-            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+            <a class="page-link"
+               href="?page={{ i }}"
+               style="background-color: #85bb65; color: #000000">
+              {{ i }}
+            </a>
           </li>
         {% endif %}
     {% endfor %}
     {% if page_obj.has_next %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+        <a class="page-link"
+           href="?page={{ page_obj.next_page_number }}"
+           style="background-color: #85bb65; color: #000000">
           Следующая
         </a>
       </li>
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+        <a class="page-link"
+           href="?page={{ page_obj.paginator.num_pages }}"
+           style="background-color: #85bb65; color: #000000">
           Последняя
         </a>
       </li>
