--- a/backend/templates/deals/includes/paginator.html
+++ b/backend/templates/deals/includes/paginator.html
@@ -6,14 +6,14 @@
         <a class="page-link"
            href="?page=1"
            style="background-color: #85bb65; color: #000000">
-          Первая
+          First
         </a>
       </li>
       <li class="page-item">
         <a class="page-link"
            href="?page={{ page_obj.previous_page_number }}"
            style="background-color: #85bb65; color: #000000">
-          Предыдущая
+          Previous
         </a>
       </li>
     {% endif %}
@@ -21,7 +21,7 @@
         {% if page_obj.number == i %}
           <li class="page-item active">
             <span class="page-link"
-                  style="background-color: #90ad71; color: #000000">
+                  style="background-color: #1c732b; color: #000000">
               {{ i }}
             </span>
           </li>
@@ -40,14 +40,14 @@
         <a class="page-link"
            href="?page={{ page_obj.next_page_number }}"
            style="background-color: #85bb65; color: #000000">
-          Следующая
+          Next
         </a>
       </li>
       <li class="page-item">
         <a class="page-link"
            href="?page={{ page_obj.paginator.num_pages }}"
            style="background-color: #85bb65; color: #000000">
-          Последняя
+          Last
         </a>
       </li>
     {% endif %}
