--- a/backend/templates/deals/includes/paginator.html
+++ b/backend/templates/deals/includes/paginator.html
@@ -21,7 +21,7 @@
         {% if page_obj.number == i %}
           <li class="page-item active">
             <span class="page-link"
-                  style="background-color: #1c732b; color: #000000">
+                  style="background-color: #1c732b;  border: 1px solid #c0c0c0; color: #000000">
               {{ i }}
             </span>
           </li>
