change deals model

--- a/backend/templates/deals/deals.html
+++ b/backend/templates/deals/deals.html
@@ -12,9 +12,10 @@
           <th style="text-align:center">Opening time</th>
           <th style="text-align:center">Closed</th>
           <th style="text-align:center">Ticker</th>
+          <th style="text-align:center">Quantity</th>
           <th style="text-align:center">Purchase price, USD</th>
           <th style="text-align:center">Selling price, USD</th>
-          <th style="text-align:center">Revenue</th>
+          <th style="text-align:center">Revenue, USD</th>
           <th style="text-align:center">Trader</th>
         </tr>
       </thead>
@@ -25,6 +26,7 @@
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.opening_date }}</td>
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.closed }}</td>
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.ticker }}</td>
+            <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.quantity }}</td>
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.purchase_price }}</td>
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.selling_price }}</td>
             <td style="text-align:center; border: 1px solid #c0c0c0">{{ deal.revenue }}</td>
