add part of instruction

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>{% block title %}Title{% endblock title %}</title>
+    <link rel="icon" href="{% static 'img/icon.ico' %}" type="image">
   </head>
   <body style="background-color: #ebf4e5">
     <header>
